news laiter added

--- a/style.css
+++ b/style.css
@@ -7,9 +7,6 @@
   
 }
 /* shared  */
-.bg-color{
-    background-color: #C6E4D6;
-}
 .title-color-and-font-size{
     color: #0E0E0E;
     font-size: 40px;
@@ -179,3 +176,36 @@ nav h4{
 }
 
 /* six section end */
+/* seventh section start */
+.news-letter{
+    margin: 50px 0;
+    padding: 80px 100px;
+    text-align: center;
+    background-color:#C6E4D6;
+    border-radius: 24px;
+}
+.news-letter p{
+    color:#0E0E0E;
+    line-height: 24px;
+}
+.news-letter input[type="email"]{
+    width: 632px;
+    padding: 30px 20px;
+    border-radius:10px 0 0 10px ;
+    border: none;
+    margin: 30px 0;
+}
+.news-letter input[type="submit"]{
+    background-color: #006a50;
+    margin-left: -6px;
+    padding: 27px 50px;
+    color: #ffffff;
+    border-radius: 0 10px 10px 0;
+    border: none;
+    font-size: 18px;
+    font-weight: 700;
+    /* transition: 0.5s; */
+}
+
+/* seventh section start */
+
