--- a/style.css
+++ b/style.css
@@ -124,6 +124,22 @@ nav h4{
     border-radius: 8px;
 }
 /* second-section end */
+/* therd section start */
+.quotation-box{
+    background-image: url('img/quote-bg.png');
+    background-repeat: no-repeat;
+    background-position: 2% -3%;
+    background-color: white;
+    padding: 25px 23px;
+    border-radius: 16px;
+    margin: 30px 0;
+   
+}
+.quotation-box p{
+   margin-bottom: 10px;
+   
+}
+/* therd section end */
 /* fifith section start */
 .recent-news{
     display: flex;
@@ -161,11 +177,14 @@ nav h4{
     gap: 20px;
 }
 .donation-box h3{
-    padding: 25px 30px;
+    padding: 35px 30px;
     background-color: white;
     border-radius: 16px;
     margin: 20px 0;
     color: #0E0E0E;
+}
+.donation-box h3:hover{
+    background-color: #C6E4D6;
 }
 .donation-parent input[type="text"]{
     width: 1032px;
