--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 *{
-    font-family: "Work Sans", serif;
-    font-optical-sizing: auto;
+    font-family: "Fira Sans", serif;
     margin: 0;
     padding: 0;
   
@@ -20,10 +22,11 @@
    
 .btn{
     background-color: #006a50;
-    padding: 10px 20px;
+    padding: 20px 40px;
     color: #ffffff;
     border-radius: 8px;
     border: none;
+    font-weight: bold;
     font-size: 18px;
     transition: 0.5s;
 }
@@ -159,11 +162,12 @@ nav h4{
     color: #0e0e0e;
     font-size: 32px;
     font-weight: 700;
+    margin-bottom: 10px;
 }
 .singal-recent-news p{
     color: #0e0e0ec0;
-    line-height: 30px;
-    margin: 20px 0;
+    line-height: 26px;
+    margin: 30px 0;
 
 }
 
@@ -180,7 +184,7 @@ nav h4{
     gap: 20px;
 }
 .donation-box h3{
-    padding: 35px 30px;
+    padding: 50px 83px;
     background-color: white;
     border: 1px solid rgba(0, 0, 0, 0.156);
     border-radius: 16px;
