--- a/style.css
+++ b/style.css
@@ -237,6 +237,7 @@ nav h4{
 /* footer start */
 footer{
     text-align: center;
+    margin-bottom: 20px;
 }
 footer div a{
     margin-left:15px ;
